--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,7 +12,7 @@
       <ion-item>
         <ion-label position="floating">Username</ion-label>
         <ion-input inputmode="text" #username="ngModel" required="true" name="username"
-          [(ngModel)]="authRequest.username"></ion-input>
+          [(ngModel)]="authRequest.name"></ion-input>
       </ion-item>
 
       <!-- Error message displayed if the username is invalid -->
