--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -42,6 +42,9 @@
       <!-- Error message displayed if the login failed -->
       <ion-text color='danger' *ngIf="loginError">Username or password is invalid.</ion-text>
 
+      <!-- Sign up button -->
+      <ion-button type="button" color="secondary" href="home/signup" expand="block">Sign up</ion-button>
+
     </div>
   </form>
 </ion-content>
