--- a/src/app/home/event/event.page.html
+++ b/src/app/home/event/event.page.html
@@ -1,9 +1,70 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>event</ion-title>
+    <ion-title>Event</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content fullscreen>
+  <form onsubmit="processForm(event)">
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
+      <ion-item>
+        <ion-label position="stacked">City<ion-text color="danger">*</ion-text></ion-label>
+        <ion-input required type="text" oninput="handleCityValue(event)" placeholder="Lausanne"></ion-input>
+      </ion-item>
 
-<ion-content>
+      <ion-item>
+        <ion-label position="stacked">Date<ion-text color="danger">*</ion-text></ion-label>
+        <ion-input required type="date" oninput="handleDataValue(event)"></ion-input>
+      </ion-item>
+
+    </ion-list>
+
+  </form>
+
+  <ion-button expand="block">Search</ion-button>
+  <ion-card>
+    <img src="https://via.placeholder.com/250x150" />
+    <ion-card-header>
+      <ion-card-subtitle>Lausanne </ion-card-subtitle>
+      <ion-card-title>TedxLausanneWomen</ion-card-title>
+      <ion-card-subtitle class="event-date-time">
+        <ion-text class="event-date">
+          <ion-icon name="calendar"></ion-icon>
+          5 Déc. 2019
+        </ion-text>
+        <ion-text class="event-time">
+          <ion-icon name="clock"></ion-icon>
+          18h
+        </ion-text>
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-text>TEDxLausanneWomen 2019 will be no less than a joyful, thought-provoking celebration of smart, savvy and diverse dynamism. </ion-text>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+  <ion-card-header>
+    <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    <ion-card-title>Card Title</ion-card-title>
+    <ion-card-subtitle class="event-date-time">
+      <ion-text class="event-date">
+        <ion-icon name="calendar"></ion-icon>
+        15 Déc. 2019
+      </ion-text>
+      <ion-text class="event-time">
+        <ion-icon name="clock"></ion-icon>
+        20h
+      </ion-text>
+    </ion-card-subtitle>
+  </ion-card-header>
+
+  <ion-card-content>
+    Keep close to Nature's heart... and break clear away, once in awhile,
+    and climb a mountain or spend a week in the woods. Wash your spirit clean.
+  </ion-card-content>
+</ion-card>
+
+
+
 
 </ion-content>
