--- a/src/app/home/favorites/favorites.page.html
+++ b/src/app/home/favorites/favorites.page.html
@@ -1,9 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>favorites</ion-title>
+    <ion-title>Favorites</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
+<ion-content fullscreen>
+  <ion-card *ngFor="let event of events">
+    <img src="https://via.placeholder.com/250x150" />
+    <ion-card-header>
+      <ion-card-subtitle>{{event.adress}} </ion-card-subtitle>
+      <ion-card-title>{{event.name}}</ion-card-title>
+      <ion-card-subtitle class="event-date-time">
+        <ion-text class="event-date">
+          <ion-icon name="calendar"></ion-icon>
+          {{event.date}}
+        </ion-text>
+        <ion-text class="event-time">
+          <ion-icon name="clock"></ion-icon>
+          {{event.time}}
+        </ion-text>
+      </ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-text>{{event.description}} </ion-text>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
