--- a/src/app/home/event/event.page.html
+++ b/src/app/home/event/event.page.html
@@ -19,9 +19,9 @@
     </ion-list>
 
   </form>
-
   <ion-button expand="block">Search</ion-button>
   <ion-card>
+    <ion-fab-button color="danger"><ion-icon name="heart"></ion-icon></ion-fab-button>
     <img src="https://via.placeholder.com/250x150" />
     <ion-card-header>
       <ion-card-subtitle>Lausanne </ion-card-subtitle>
