--- a/src/app/home/event/event.page.scss
+++ b/src/app/home/event/event.page.scss
@@ -11,3 +11,14 @@
   margin: 0  1em;
   float: right;
 }
+
+.event-date-time button.like-button {
+background: red;
+}
+
+ion-fab-button {
+
+  position: fixed;
+  right: 0;
+  top: 45%;
+}
