onsubmit function create event

--- a/src/app/home/event/create/create.page.html
+++ b/src/app/home/event/create/create.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <form #greetingForm="ngForm" (submit)="onSubmit(userForm)">
+    <form #eventForm="ngForm" (submit)="onSubmit(eventForm)">
         <ion-list>
     
               <ion-item>
