--- a/src/app/home/event/event.page.html
+++ b/src/app/home/event/event.page.html
@@ -17,7 +17,7 @@
       </ion-item>
 
     </ion-list>
-    <ion-button type="submit" expand="block" [disabled]="filterForm.invalid">Log in</ion-button>
+    <ion-button type="submit" expand="block" [disabled]="filterForm.invalid">Search</ion-button>
   </form>
  
     
