store event with geodata

--- a/src/app/home/event/create/create.page.html
+++ b/src/app/home/event/create/create.page.html
@@ -22,8 +22,8 @@
     
               <ion-item>
                   <ion-label position="floating">Location</ion-label>
-                  <ion-input inputmode="text" #eventlocation="ngModel" required="true" name="eventlocation"
-                    [(ngModel)]="newEvent.location"></ion-input>
+                  <ion-input inputmode="text" #eventaddress="ngModel" required="true" name="eventaddress"  
+                  [(ngModel)]="newEvent.address"></ion-input>
                 </ion-item>
 
                 <ion-item>
