--- a/src/app/home/event/event.page.html
+++ b/src/app/home/event/event.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Event</ion-title>
+    <ion-title>All Events</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
@@ -20,11 +20,12 @@
     <ion-button type="submit" expand="block" [disabled]="filterForm.invalid">Search</ion-button>
   </form>
 
-
   <ion-card *ngFor="let event of events">
-    <img src="https://via.placeholder.com/250x150" />
-    <ion-fab-button color="danger"><ion-icon name="heart"></ion-icon></ion-fab-button>
+    <ion-fab vertical="top" horizontal="end" slot="fixed">
+      <ion-fab-button color="danger"><ion-icon name="add"></ion-icon></ion-fab-button>
+    </ion-fab>
     <ion-card-header>
+      <img src="https://via.placeholder.com/250x150" />
       <ion-card-subtitle>{{event.adress}} </ion-card-subtitle>
       <ion-card-title>{{event.name}}</ion-card-title>
       <ion-card-subtitle class="event-date-time">
