--- a/src/app/home/event/event.page.html
+++ b/src/app/home/event/event.page.html
@@ -26,8 +26,10 @@
   <ion-card *ngFor="let event of events">
     <img src="https://via.placeholder.com/250x150" />
     <div *ngIf="isAuth">
+      <ion-fab vertical="top" horizontal="end" slot="fixed">
       <ion-fab-button (click)="member(event._id)" color="danger"><ion-icon name="add"></ion-icon></ion-fab-button>
-    </div>    
+      </ion-fab>
+    </div>
     <ion-card-header>
       <ion-card-subtitle>{{event.adress}} </ion-card-subtitle>
       <ion-card-title>{{event.name}}</ion-card-title>
