--- a/src/app/home/event/one-event-layout/one-event-layout.page.html
+++ b/src/app/home/event/one-event-layout/one-event-layout.page.html
@@ -17,7 +17,7 @@
       Founded in 1829 on an isthmus between Lake Monona and Lake Mendota, Madison was named the capital of the Wisconsin Territory in 1836.
     </ion-card-content>
   </ion-card>
-
+  <ion-button expand="block">Delete Event</ion-button>
   <ion-button expand="block">Show Chat</ion-button>
 
 </ion-content>
