--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -5,5 +5,32 @@
 </ion-header>
 
 <ion-content>
+  <ion-item>
+    <ion-avatar slot="start">
+      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+    </ion-avatar>
+    <ion-label>User</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>
+      Pseudo
+    </ion-label>
+    <ion-icon name="contact" slot="end"></ion-icon>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label>
+      E-mail
+    </ion-label>
+    <ion-icon name="mail" slot="end"></ion-icon>
+  </ion-item>
+  
+  <ion-item>
+    <ion-label>
+      Password
+    </ion-label>
+    <ion-icon name="build" slot="end"></ion-icon>
+  </ion-item>
+  <ion-button expand="block">Delete my account</ion-button>
 
 </ion-content>
