--- a/src/app/home/event/create/create.page.html
+++ b/src/app/home/event/create/create.page.html
@@ -23,7 +23,7 @@
               <ion-item>
                   <ion-label position="floating">Location</ion-label>
                   <ion-input inputmode="text" #eventaddress="ngModel" required="true" name="eventaddress"  
-                  [(ngModel)]="newEvent.address"></ion-input>
+                  [(ngModel)]="newEvent.adress"></ion-input>
                 </ion-item>
 
                 <ion-item>
