--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -31,6 +31,34 @@
     </ion-label>
     <ion-icon name="build" slot="end"></ion-icon>
   </ion-item>
+<h2>Mes événements</h2>
+<!-- <div *ngIf="events[0]"> -->
+  <div>
+  <ion-item *ngFor="let event of events | slice:0:10" >
+    <ion-avatar slot="start">
+      <img src="{{ event.image[0] }}" alt="Photo de l'event">
+    </ion-avatar>
+    <ion-label>
+      <ion-grid>
+        <ion-row>
+          <ion-col (click)="onSelect(poi)">
+            <h2>{{ event.name }}</h2>
+            <p>{{ event.date }}<p>
+          </ion-col>
+          <ion-col size="1">
+            <ion-button icon-only (click)="redirectToUpdateForm(poi)">
+              <ion-icon name="settings"></ion-icon>
+            </ion-button>
+            <ion-button icon-only (click)="deletePoi(poi)">
+              <ion-icon name="close-circle-outline"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-label>
+  </ion-item>
+</div>
+
   <ion-button expand="block">Delete my account</ion-button>
 
 </ion-content>
