--- a/src/app/home/event/create/create.page.html
+++ b/src/app/home/event/create/create.page.html
@@ -7,8 +7,8 @@
 <ion-content>
     <ion-button (click)="takePicture()">Take picture</ion-button> 
     <img *ngIf="pictureData" src="data:image/jpeg;base64,{{ pictureData }}" />
-    <ion-button (click)="uploadPicture()">Take picture</ion-button> 
-    <img *ngIf="pictureData" src="data:image/jpeg;base64,{{ pictureData }}" />
+    <ion-button (click)="uploadPicture()">upload picture</ion-button> 
+    <img *ngIf="picture" src="data:image/jpeg;base64,{{ pictureData }}" />
     <form #eventForm="ngForm" (submit)="onSubmit(eventForm)">
         <ion-list>
     
