--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -43,7 +43,7 @@
       <ion-text color='danger' *ngIf="loginError">Username or password is invalid.</ion-text>
 
       <!-- Sign up button -->
-      <ion-button type="button" color="secondary" href="home/signup" expand="block">Sign up</ion-button>
+      <ion-button type="button" color="secondary" routerLink="signup" expand="block">Sign up</ion-button>
 
     </div>
   </form>
