add delete event function

--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -51,7 +51,7 @@
             <ion-button icon-only (click)="redirectToUpdateForm()">
               <ion-icon name="settings"></ion-icon>
             </ion-button>
-            <ion-button icon-only (click)="deleteEvent()">
+            <ion-button icon-only (click)="deleteEvent(event['_id'])">
               <ion-icon name="close-circle-outline"></ion-icon>
             </ion-button>
           </ion-col>
