--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-  <ion-title>Home</ion-title>
+  <ion-title><img alt="logo" height="50" src="assets/manevent-logo.svg"></ion-title>
   </ion-toolbar>
 </ion-header>
 
