--- a/src/app/home/event/update/update.page.html
+++ b/src/app/home/event/update/update.page.html
@@ -14,7 +14,7 @@
               <ion-item>
                   <ion-label position="floating">Event Name</ion-label>
                   <ion-input inputmode="text" #eventname="ngModel" name="name"
-              [(ngModel)]="newEvent.name">{{newEvent}}</ion-input>
+              [(ngModel)]="newEvent.name">{{events?.name}}</ion-input>
                 </ion-item>
     
                 <ion-item>
